force-app/main/default/objects/Lead/fields/Account_Cat__c.field-meta.xml
<CustomField>
    <fullName>Account_Cat__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bucket &amp; Trowel</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Interior design</fullName>
            </value>
            <value>
                <fullName>Kitchen &amp; Bath</fullName>
            </value>
            <value>
                <fullName>Property owner</fullName>
            </value>
            <value>
                <fullName>National Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>