force-app/main/default/objects/Lead/fields/Acuity_Calendar_Name__c.field-meta.xml
<CustomField>
    <fullName>Acuity_Calendar_Name__c</fullName>
    <description>This is the name of the Calendar (by Showroom Rep) as listed in Acuity Scheduling.</description>
    <label>Acuity Calendar Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>