force-app/main/default/objects/Lead/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <description>This is the date of the appointment booked by online (Acuity) scheduling</description>
    <inlineHelpText>This is the date of the appointment booked by online (Acuity) scheduling</inlineHelpText>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>