force-app/main/default/objects/Lead/fields/Appointment_Duration__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Duration__c</fullName>
    <description>This is the scheduled duration of the appointment booked by online (Acuity) scheduling in minutes</description>
    <inlineHelpText>This is the scheduled duration of the appointment booked by online (Acuity) scheduling in minutes</inlineHelpText>
    <label>Appointment Duration</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>