force-app/main/default/objects/Lead/fields/Appointment_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Time__c</fullName>
    <description>This is the scheduled time of the appointment booked by online (Acuity) scheduling</description>
    <inlineHelpText>This is the scheduled time of the appointment booked by online (Acuity) scheduling</inlineHelpText>
    <label>Appointment Time</label>
    <type>Time</type>
</CustomField>