force-app/main/default/objects/Lead/fields/Cabinets__c.field-meta.xml
<CustomField>
    <fullName>Cabinets__c</fullName>
    <description>Have you picked out your cabinets?</description>
    <inlineHelpText>Have you picked out your cabinets?</inlineHelpText>
    <label>Cabinets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>