force-app/main/default/objects/Lead/fields/Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Type__c</fullName>
    <formula>TEXT(How_did_the_client_hear_about_us__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Type</label>
    <type>Text</type>
</CustomField>