force-app/main/default/objects/Lead/fields/CaseSafe_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Lead_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Lead ID</label>
    <type>Text</type>
</CustomField>