force-app/main/default/objects/Lead/fields/Client_partner_notes__c.field-meta.xml
<CustomField>
    <fullName>Client_partner_notes__c</fullName>
    <label>Client partner notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>