force-app/main/default/objects/Lead/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remodel</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>