force-app/main/default/objects/Lead/fields/Counter_Top__c.field-meta.xml
<CustomField>
    <fullName>Counter_Top__c</fullName>
    <inlineHelpText>Have you picked out your counter tops?</inlineHelpText>
    <label>Counter Top</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>