force-app/main/default/objects/Lead/fields/Current_Space_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Space_1__c</fullName>
    <label>Current Space 1</label>
    <length>256</length>
    <type>Html</type>
</CustomField>