force-app/main/default/objects/Lead/fields/Current_Space_2__c.field-meta.xml
<CustomField>
    <fullName>Current_Space_2__c</fullName>
    <label>Current Space 2</label>
    <length>256</length>
    <type>Html</type>
</CustomField>