force-app/main/default/objects/Lead/fields/Follow_up_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Appointment__c</fullName>
    <inlineHelpText>Did The Customer Schedule a Full 2nd Appointment ?</inlineHelpText>
    <label>Follow up Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>