force-app/main/default/objects/Lead/fields/How_did_the_client_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>How_did_the_client_hear_about_us__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>How did the client hear about us</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>