force-app/main/default/objects/Lead/fields/Identified_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Identified_Contractor__c</fullName>
    <inlineHelpText>If you are working with a tile installer, please name them below. If not, please put NA:</inlineHelpText>
    <label>Identified Contractor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>