force-app/main/default/objects/Lead/fields/Identified_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Identified_Dealer__c</fullName>
    <inlineHelpText>If you are working with a dealer, please name them below. If not, please put NA:</inlineHelpText>
    <label>Identified Dealer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>