force-app/main/default/objects/Lead/fields/Identified_Designer__c.field-meta.xml
<CustomField>
    <fullName>Identified_Designer__c</fullName>
    <inlineHelpText>If you are working with a designer, please name them below. If not, please put NA:</inlineHelpText>
    <label>Identified Designer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>