force-app/main/default/objects/Lead/fields/Inspiration_1__c.field-meta.xml
<CustomField>
    <fullName>Inspiration_1__c</fullName>
    <label>Inspiration 1</label>
    <length>256</length>
    <type>Html</type>
</CustomField>