force-app/main/default/objects/Lead/fields/Inspiration_2__c.field-meta.xml
<CustomField>
    <fullName>Inspiration_2__c</fullName>
    <label>Inspiration 2</label>
    <length>256</length>
    <type>Html</type>
</CustomField>