force-app/main/default/objects/Lead/fields/Kind_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Kind_Of_Project__c</fullName>
    <label>Kind Of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>