force-app/main/default/objects/Lead/fields/Louisville_Tile_branch_that_services_you__c.field-meta.xml
<CustomField>
    <fullName>Louisville_Tile_branch_that_services_you__c</fullName>
    <label>Louisville Tile branch that services you</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Louisville, KY</fullName>
            </value>
            <value>
                <fullName>Lexington, KY</fullName>
            </value>
            <value>
                <fullName>Nashville, TN</fullName>
            </value>
            <value>
                <fullName>Knoxville, TN</fullName>
            </value>
            <value>
                <fullName>Fishers, IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>