force-app/main/default/objects/Lead/fields/LTD_Location__c.field-meta.xml
<CustomField>
    <fullName>LTD_Location__c</fullName>
    <description>Location address as entered in Acuity calendars. Used for formula field to display LTD Branch.</description>
    <inlineHelpText>Location address as entered in Acuity calendars. Used for formula field to display LTD Branch.</inlineHelpText>
    <label>LTD Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>