force-app/main/default/objects/Lead/fields/Name_of_Architectural_Firm__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Architectural_Firm__c</fullName>
    <label>Name of Architectural Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>