force-app/main/default/objects/Lead/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <inlineHelpText>Customer Order Number</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>