force-app/main/default/objects/Lead/fields/Preferred_method_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_method_of_contact__c</fullName>
    <label>Preferred method of contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>