force-app/main/default/objects/Lead/fields/Project_Areas__c.field-meta.xml
<CustomField>
    <fullName>Project_Areas__c</fullName>
    <label>Project Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bathroom Floor</fullName>
            </value>
            <value>
                <fullName>Shower Floor</fullName>
            </value>
            <value>
                <fullName>Shower Wall</fullName>
            </value>
            <value>
                <fullName>Tub Splash/Deck</fullName>
            </value>
            <value>
                <fullName>Vanity Wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>