force-app/main/default/objects/Lead/fields/Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Date__c</fullName>
    <inlineHelpText>Enter the date the client expects to need to make their purchase.</inlineHelpText>
    <label>Project Date</label>
    <type>Date</type>
</CustomField>