force-app/main/default/objects/Lead/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <label>Project / Visit Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>