force-app/main/default/objects/Lead/fields/Project_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline__c</fullName>
    <label>Project Timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Tile Within a Week</fullName>
            </value>
            <value>
                <fullName>3-8 Weeks</fullName>
            </value>
            <value>
                <fullName>No Hurry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>