force-app/main/default/objects/Lead/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <inlineHelpText>Select the project type that best describes the client&apos;s project.  Additional clarification can be profided in the Project Summary field.</inlineHelpText>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backsplash</fullName>
            </value>
            <value>
                <fullName>Bathroom</fullName>
            </value>
            <value>
                <fullName>Custom Consultation</fullName>
            </value>
            <value>
                <fullName>Entire Home</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Multiple Rooms</fullName>
            </value>
            <value>
                <fullName>Outdoor Space</fullName>
            </value>
            <value>
                <fullName>Single Room</fullName>
            </value>
            <value>
                <fullName>Walk In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>