force-app/main/default/objects/Lead/fields/Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select an existing account who referred lead.</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>