force-app/main/default/objects/Lead/fields/Referred__c.field-meta.xml
<CustomField>
    <fullName>Referred__c</fullName>
    <inlineHelpText>Name of employee who referred lead.</inlineHelpText>
    <label>Referred By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>