force-app/main/default/objects/Lead/fields/Sample_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Request Form Name</label>
    <referenceTo>Sample_Request_Form__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>