force-app/main/default/objects/Lead/fields/SSID__c.field-meta.xml
<CustomField>
    <fullName>SSID__c</fullName>
    <label>SSID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>