force-app/main/default/objects/Lead/fields/Time_spent__c.field-meta.xml
<CustomField>
    <fullName>Time_spent__c</fullName>
    <inlineHelpText>Approximately how long did you help this customer?</inlineHelpText>
    <label>Time spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>