force-app/main/default/objects/Lead/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <inlineHelpText>Timeframe that tile is needed.</inlineHelpText>
    <label>Timeframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>