force-app/main/default/objects/Lead/fields/Upsell_Notes__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Notes__c</fullName>
    <inlineHelpText>Note any opportunities you see for an upsell.</inlineHelpText>
    <label>Upsell Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>