force-app/main/default/objects/Lead/fields/Virtual_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Appointment__c</fullName>
    <inlineHelpText>Would you like to make this a virtual appointment? If yes, your designer will call with instructions prior to your virtual appointment.</inlineHelpText>
    <label>Virtual Appointment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>