force-app/main/default/objects/Lead/fields/Who_is_the_client_working_with__c.field-meta.xml
<CustomField>
    <fullName>Who_is_the_client_working_with__c</fullName>
    <inlineHelpText>Select whether the client is already working with a professional to help them with the project or whether they need a recommendation.  Additional clarification can be entered in the Client Partner Notes field.</inlineHelpText>
    <label>Who is the client working with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The client has someone</fullName>
            </value>
            <value>
                <fullName>Client needs recommendation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>