force-app/main/default/objects/Lead/recordTypes/Architect_Designer.recordType-meta.xml
<RecordType>
    <fullName>Architect_Designer</fullName>
    <active>true</active>
    <businessProcess>Architect %2F Designer</businessProcess>
    <label>Architect / Designer</label>
</RecordType>