force-app/main/default/objects/Lead/recordTypes/Professional.recordType-meta.xml
<RecordType>
    <fullName>Professional</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <description>Record type to create professional type lead.</description>
    <label>Professional</label>
</RecordType>