force-app/main/default/objects/Lead/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <description>Record type to create retail type lead.</description>
    <label>Retail</label>
</RecordType>