force-app/main/default/objects/Lead/recordTypes/Sample_Request_Form_Lead.recordType-meta.xml
<RecordType>
    <fullName>Sample_Request_Form_Lead</fullName>
    <active>true</active>
    <businessProcess>Owner %2F Franchisee</businessProcess>
    <description>Please do not select, Sample Request leads will be created by system.</description>
    <label>Sample Request Form Lead</label>
</RecordType>