force-app/main/default/objects/Lead/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Preferred_method_of_contact__c, &apos;Email&apos;), ISBLANK( Email ))</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>This is Required</errorMessage>
</ValidationRule>