force-app/main/default/objects/Lead/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Preferred_method_of_contact__c, &apos;Phone&apos;), ISBLANK( Phone ))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>This is Required</errorMessage>
</ValidationRule>