force-app/main/default/objects/Lead/listViews/Acuity_Leads.listView-meta.xml
<ListView>
    <fullName>Acuity_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Project_Type__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Appointment_Time__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.RATING</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Acuity</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Retail</value>
    </filters>
    <label>Acuity Leads</label>
</ListView>