force-app/main/default/objects/Lead/listViews/Chattanooga_035_Lead.listView-meta.xml
<ListView>
    <fullName>Chattanooga_035_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Chattanooga 035</label>
    <queue>Chattanooga_035</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>