force-app/main/default/objects/Lead/listViews/Cincinnati_065_Lead.listView-meta.xml
<ListView>
    <fullName>Cincinnati_065_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Cincinnati 065</label>
    <queue>Cincinnati_065</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>