force-app/main/default/objects/Lead/listViews/Evansville_050_Lead.listView-meta.xml
<ListView>
    <fullName>Evansville_050_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Evansville 050</label>
    <queue>Evansville_050</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>