force-app/main/default/objects/Lead/listViews/Fishers_055_Lead.listView-meta.xml
<ListView>
    <fullName>Fishers_055_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Fishers 055</label>
    <queue>Fishers_055</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>