force-app/main/default/objects/Lead/listViews/Ft_Wayne_070_Lead.listView-meta.xml
<ListView>
    <fullName>Ft_Wayne_070_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Ft. Wayne 070</label>
    <queue>Ft_Wayne_070</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>