force-app/main/default/objects/Lead/listViews/Grand_Rapids_080_Lead.listView-meta.xml
<ListView>
    <fullName>Grand_Rapids_080_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Grand Rapids 080</label>
    <queue>Grand_Rapids_080</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>