force-app/main/default/objects/Lead/listViews/Knoxville_037_Lead.listView-meta.xml
<ListView>
    <fullName>Knoxville_037_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Knoxville 037</label>
    <queue>Knoxville_037</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>