force-app/main/default/objects/Lead/listViews/Lexington_060_Lead.listView-meta.xml
<ListView>
    <fullName>Lexington_060_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lexington 060</label>
    <queue>Lexington_060</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>