force-app/main/default/objects/Lead/listViews/Louisville_040_Lead.listView-meta.xml
<ListView>
    <fullName>Louisville_040_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Louisville 040</label>
    <queue>Louisville_040</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>