force-app/main/default/objects/Lead/listViews/Nashville_030_Lead.listView-meta.xml
<ListView>
    <fullName>Nashville_030_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Nashville 030</label>
    <queue>Nashville_030</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>