force-app/main/default/objects/Lead/listViews/Professional_Leads.listView-meta.xml
<ListView>
    <fullName>Professional_Leads</fullName>
    <columns>Lead_Name__c</columns>
    <columns>Contact_Name__c</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Account_Cat__c</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Preferred_method_of_contact__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <label>Professional Leads</label>
</ListView>