force-app/main/default/objects/Lead/listViews/Professional_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Professional_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Professional Queue</label>
    <queue>Professional_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>