force-app/main/default/objects/Lead/listViews/Queue_For_Test_Lead.listView-meta.xml
<ListView>
    <fullName>Queue_For_Test_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue For Test</label>
    <queue>Queue_For_Test</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>